Donate, Fork & Contact links

--- a/index.html
+++ b/index.html
@@ -14,11 +14,11 @@
       <form><input type="text"></form>
       <h3></h3>
       <ul>
-        <li><a href="/page1.html">About</a></li>
-        <li><a href="/page1.html">Add-on</a></li>
-        <li><a href="/page1.html">Donate</a></li>
-        <li><a href="/page1.html">Fork</a></li>
-        <li><a href="/page1.html">Contact</a></li>
+        <li><a href="#">About</a></li>
+        <li><a href="#">Add-on</a></li>
+        <li><a href="https://www.paypal.com/cgi-bin/webscr?cmd=_s-xclick&hosted_button_id=MCLUAGA57YQL2">Donate</a></li>
+        <li><a href="https://github.com/darkjpeg/darkjpeg.github.io">Fork</a></li>
+        <li><a href="https://github.com/yndi">Contact</a></li>
       </ul>
     </section>
     <script src="//ajax.googleapis.com/ajax/libs/jquery/2.0.2/jquery.min.js"></script>
