--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
       <ul>
         <li><a href="#">About</a></li>
         <li><a href="#">Add-on</a></li>
-        <li><a href="https://www.paypal.com/cgi-bin/webscr?cmd=_s-xclick&hosted_button_id=MCLUAGA57YQL2">Donate</a></li>
+        <li><a href="https://www.paypal.com/cgi-bin/webscr?cmd=_s-xclick&amp;hosted_button_id=MCLUAGA57YQL2">Donate</a></li>
         <li><a href="https://github.com/darkjpeg/darkjpeg.github.io">Fork</a></li>
         <li><a href="https://github.com/yndi">Contact</a></li>
       </ul>
