--- a/index.html
+++ b/index.html
@@ -1,27 +1,36 @@
 <!doctype html>
 <html lang="en">
 <head>
-  <meta charset="utf-8">
-  <title>darkjpeg</title>
-  <meta name="description" content="Open source online JPEG steganography tool">
-  <link rel="icon" href="/images/favicon.ico">
-  <link rel="stylesheet" href="/build/style.css">
+    <meta charset="utf-8">
+    <title>darkjpeg</title>
+    <meta name="description" content="Open source JPEG steganography web service">
+    <link rel="icon" href="/images/favicon.ico">
+    <link rel="stylesheet" href="/build/style.css">
 </head>
 <body>
     <section>
-      <h1>darkjpeg</h1>
-      <h2>steganography redefined</h2>
-      <form><input type="text"></form>
-      <h3></h3>
-      <ul>
-        <li><a href="#">About</a></li>
-        <li><a href="#">Add-on</a></li>
-        <li><a href="https://www.paypal.com/cgi-bin/webscr?cmd=_s-xclick&amp;hosted_button_id=MCLUAGA57YQL2">Donate</a></li>
-        <li><a href="https://github.com/darkjpeg/darkjpeg.github.io">Fork</a></li>
-        <li><a href="https://github.com/yndi">Contact</a></li>
-      </ul>
+        <h1>darkjpeg</h1>
+        <h2>steganography redefined</h2>
+        <form><input type="text"></form>
+        <h3></h3>
+        <ul>
+            <li><a href="https://github.com/darkjpeg/darkjpeg.github.io/wiki/darkjpeg">About</a></li>
+            <li><a href="#">Add-on</a></li>
+            <li><a href="https://www.paypal.com/cgi-bin/webscr?cmd=_s-xclick&amp;hosted_button_id=MCLUAGA57YQL2">Donate</a></li>
+            <li><a href="https://github.com/darkjpeg/darkjpeg.github.io">Fork</a></li>
+            <li><a href="https://github.com/yndi">Contact</a></li>
+        </ul>
     </section>
     <script src="//ajax.googleapis.com/ajax/libs/jquery/2.0.2/jquery.min.js"></script>
     <script src="/build/script.js"></script>
+    <script>
+        (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||
+        function(){(i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();
+        a=s.createElement(o),m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;
+        m.parentNode.insertBefore(a,m)})(window,document,'script',
+        '//www.google-analytics.com/analytics.js','ga');
+        ga('create', 'UA-42458933-1', 'darkjpeg.github.io');
+        ga('send', 'pageview');
+    </script>
 </body>
 </html>
