Meta description update

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="utf-8">
     <title>darkjpeg</title>
-    <meta name="description" content="Open source JPEG steganography web service">
+    <meta name="description" content="Free, secure and fast open source JPEG steganography web service written in JavaScript under the MIT License, supporting SHA3 key generation, AES256 encoding, random image containters, RarJPEGs and non-tracking anonymous client-side processing">
     <link rel="icon" href="/images/favicon.ico">
     <link rel="stylesheet" href="/build/style.css">
 </head>
