--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         <h3></h3>
         <ul>
             <li><a href="https://github.com/darkjpeg/darkjpeg.github.io/wiki/darkjpeg">About</a></li>
-            <li><a href="http://crossrider.com/download/37364">Add-on</a></li>
+            <li><a href="https://crossrider.com/download/37364">Add-on</a></li>
             <li><a href="https://www.paypal.com/cgi-bin/webscr?cmd=_s-xclick&amp;hosted_button_id=MCLUAGA57YQL2">Donate</a></li>
             <li><a href="https://github.com/darkjpeg/darkjpeg.github.io">Fork</a></li>
             <li><a href="https://github.com/yndi">Contact</a></li>
