--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         <form><input type="text"></form>
         <h3></h3>
         <ul>
-            <li><a href="https://github.com/darkjpeg/darkjpeg.github.io/wiki/darkjpeg">About</a></li>
+            <li><a href="https://github.com/darkjpeg/darkjpeg.github.io/blob/master/NOTES.md">About</a></li>
             <li><a href="https://crossrider.com/download/37364">Add-on</a></li>
             <li><a href="https://www.paypal.com/cgi-bin/webscr?cmd=_s-xclick&amp;hosted_button_id=MCLUAGA57YQL2">Donate</a></li>
             <li><a href="https://github.com/darkjpeg/darkjpeg.github.io">Fork</a></li>
