Hide disabled JavaScript message

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         <h1>darkjpeg</h1>
         <h2>steganography redefined</h2>
         <form><input type="text"></form>
-        <h3>Oops! JavaScript disabled :(</h3>
+        <h3><noscript>Oops! JavaScript disabled :(</noscript></h3>
         <ul>
             <li><a href="https://github.com/darkjpeg/darkjpeg.github.io/blob/master/NOTES.md">About</a></li>
             <li><a href="https://crossrider.com/download/37364">Add-on</a></li>
